--- a/views/register.pug
+++ b/views/register.pug
@@ -5,9 +5,9 @@ block content
         form.form(action="/register" method="POST")
             h2 Register
             label(for="firstname") First name
-            input(type="text" name="name" required)
+            input(type="text" name="firstname" required)
             label(for="lastname") Last name
-            input(type="text" name="name" required)
+            input(type="text" name="lastname" required)
             label(for="email") Email
             input(type="email" name="email" required)
             label(for="password") Password
