Registration, login, logout function

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,3 +1,5 @@
+include mixins/_header
+
 doctype html
 html
   head
@@ -7,8 +9,8 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block header
-      h1 header
-      
+      +header(user)
+
     block messages
       if locals.flashes
         .inner
