--- a/views/editPageMeta.pug
+++ b/views/editPageMeta.pug
@@ -1,10 +1,11 @@
 extends layout
 
 include mixins/_header
+include mixins/_pageMetaForm
 
 block header
     +header(user)
 
 block content
-    h2= title
-    p this is where user will edit content
+    .inner
+        +pageMetaForm()
