ContentSectionForm pug file added

--- a/views/mixins/_pageSchemaForm.pug
+++ b/views/mixins/_pageSchemaForm.pug
@@ -1,16 +1,13 @@
+include _contentSectionForm
+
 mixin pageSchemaForm(page = {})
-    form.form(action="/schema" method="POST")
-        h2 Create page
+    form.form(name="page_schema" action="/schema" method="POST")
+        h2 Add content sections
         p Choose what content to manage
-        p: em Fields will be added to a single CMS page. You can add as many pages as you like
-        label(for="title") Page title
-        input(type="text" name='title' placeholder="Untitled page") 
-        label(for="subtitle") Subtitle
-        input(type="text" name='subtitle')
-        label(for="index") Page index
-        p This will be used to sequence pages if ordering by name or date is insufficient
-        input(type="number" name='index' placeholder="0") 
-        label(for="rel_path") Relative path of page to be managed
-            span.--required (req)
-        input(type="text" name='rel_path' placeholder="/" required)
-        input.button(type="submit" value="Next")
+        +contentSectionForm(Date.now())
+        //- change class on button
+        button.nav__link(type="button") 
+            != h.icon('add')
+            span Add section
+        
+        input.button(for="page_schema" type="submit" value="Save")
