--- a/views/mixins/_settingsForm.pug
+++ b/views/mixins/_settingsForm.pug
@@ -8,15 +8,15 @@ mixin settingsForm(s = {})
         fieldset
             legend Allow the following types of syntax
             - const support = s.extended_syntax
-            input(type="checkbox" name='markdown' value="true" checked=(support.markdown))
+            input(type="checkbox" name='markdown' value="true" checked=(support && support.markdown))
             label(for="markdown") Markdown 
-            input(type="checkbox" name='html' value="true" checked=(support.html))
+            input(type="checkbox" name='html' value="true" checked=(support && support.html))
             label(for="html") HTML 
-            input(type="checkbox" name='pug' value="true" checked=(support.pug))
+            input(type="checkbox" name='pug' value="true" checked=(support && support.pug))
             label(for="pug") pug 
-            input(type="checkbox" name='jsx' value="true" checked=(support.jsx))
+            input(type="checkbox" name='jsx' value="true" checked=(support && support.jsx))
             label(for="jsx") jsx 
-            input(type="checkbox" name='ejs' value="true" checked=(support.ejs))
+            input(type="checkbox" name='ejs' value="true" checked=(support && support.ejs))
             label(for="ejs") ejs
         input(type="radio" id='multi' name='multipage' value='true' checked=(s.multipage)) 
         label(for='multi') Multipage site
