--- a/views/mixins/_contentSectionForm.pug
+++ b/views/mixins/_contentSectionForm.pug
@@ -6,12 +6,12 @@ mixin contentSectionForm(id)
     p: strong New Section
     //- form(name=`content_${id}` action='/schema/${id}' method="POST")
 
-    label(for="title") Title for content section
+    label(for="title" required) Title for content section
         span.--required (req)
     input(type="text" name='title' placeholder="Untitled section") 
     label(for="index") index
     p This will be used to order the content sections on the page
-    p if no index is provided the sections will be arranged in order of their creation
+    p #[<strong>Indexes must be unique. </strong>]If no index is provided the sections will be arranged in order of their creation
     input(type="number" name='index' placeholder="0") 
     label(for="css_selector") CSS selector that associated with content
     input(type="text" name='css_selector' placeholder="#id")
