pug partial added to front end js using webpack pug-html-loader

--- a/views/includes/_contentSectionForm.pug
+++ b/views/includes/_contentSectionForm.pug
@@ -1,6 +1,4 @@
-mixin contentSectionForm(id)
-    section.content-section
-    p= id
+.content-section
     hr
     //- Future iterations may use (contenteditable="true") instead of form fields
     p: strong New Section
