--- a/views/mixins/_pageSchemaForm.pug
+++ b/views/mixins/_pageSchemaForm.pug
@@ -1,11 +1,11 @@
-include _contentSectionForm
+//- include _contentSectionForm
 
 mixin pageSchemaForm(page = {})
     form.form(name="page_schema" action="/schema" method="POST")
         h2 Add content sections
         p Choose what content to manage
-        +contentSectionForm(Date.now())
-    
+        //- +contentSectionForm(Date.now())
+        include ../includes/_contentSectionForm
         //- In a very inelegant solution to being able to add subsequent form sections on button click, the markup for the section of the form is in a JS file. Because PUG compiles before runtime manipulating the DOM with PUG isn't doable in any way I could think of
 
         //- put markup for contentSectionForm into node and use 
