Method to validate page's existance before allowing editing of related documents

--- a/views/mixins/_pageSchemaForm.pug
+++ b/views/mixins/_pageSchemaForm.pug
@@ -1,8 +1,8 @@
 //- include _contentSectionForm
 
 mixin pageSchemaForm(page = {})
-    form.form(name="page_schema" action="/schema" method="POST")
-        h2 Add content sections
+    form.form(name="page_schema" action=`/schema/${page._id}` method="POST")
+        h2 #{page.verb} content sections
         p Choose what content to manage
         //- +contentSectionForm(Date.now())
         include ../includes/_contentSectionForm
