Content rules included in saved content documents

--- a/views/includes/_contentSectionForm.pug
+++ b/views/includes/_contentSectionForm.pug
@@ -32,9 +32,9 @@
         input(type="text" name='max_unit') 
         label(for="min_unit") Unit for min value
         input(type="text" name='min_unit') 
-        label(for="max_apply_to") Max value
+        label(for="max_apply_to") Max value applies to (e.g. height)
         input(type="text" name='max_apply_to') 
-        label(for="min_apply_to") Min value
+        label(for="min_apply_to") Min value applies to (e.g. height)
         input(type="text" name='min_apply_to') 
 
 
