--- a/views/includes/_contentSectionForm.pug
+++ b/views/includes/_contentSectionForm.pug
@@ -4,9 +4,9 @@
     p: strong New Section
     //- form(name=`content_${id}` action='/schema/${id}' method="POST")
 
-    label(for="title" required) Title for content section
+    label(for="title") Title for content section
         span.--required (req)
-    input(type="text" name='title' placeholder="Untitled section") 
+    input(type="text" name='title' placeholder="Untitled section" required) 
     label(for="index") index
     p This will be used to order the content sections on the page
     p #[<strong>Indexes must be unique. </strong>]If no index is provided the sections will be arranged in order of their creation
