--- a/views/mixins/_pageSchemaForm.pug
+++ b/views/mixins/_pageSchemaForm.pug
@@ -6,10 +6,8 @@ mixin pageSchemaForm(page = {})
         p Choose what content to manage
         //- +contentSectionForm(Date.now())
         include ../includes/_contentSectionForm
-        //- In a very inelegant solution to being able to add subsequent form sections on button click, the markup for the section of the form is in a JS file. Because PUG compiles before runtime manipulating the DOM with PUG isn't doable in any way I could think of
+        //- subsequent form sections added on button click. See addContentSection.js in public/javascripts/modules. Because PUG compiles before runtime manipulating the DOM with PUG isn't doable in any other way I could think of
 
-        //- put markup for contentSectionForm into node and use 
-        //- this.parentNode.insetBefore(contentSectionForm, this)
         //- change class on button
         button.nav__link(type="button" id="addSectionBtn") 
             != h.icon('add')
