Refactor of Mongoose validators to account for mg4 async rules

--- a/views/users.pug
+++ b/views/users.pug
@@ -4,3 +4,6 @@ block content
     .inner
         h2= title
         a(href="/register"): p Create new user
+        hr
+        each user in users
+            p #{user}
