--- a/views/register.pug
+++ b/views/register.pug
@@ -8,9 +8,11 @@ block content
             if user
                 label(for="role") Role
                 select(name="role" required)
-                    option(disabled selected=`${!body}` value="") Choose user role
-                    option(value="administrator" selected=`${body && (body.role === "administrator")}`) Administrator
-                    option(value="editor" selected=`${body && (body.role === "editor")}`) Editor
+                    - const adminSelected = body && body.role === "administrator"
+                    - const editorSelected = body && body.role === "editor"
+                    option(disabled selected=!body value="") Choose user role
+                    option(value="administrator" selected=adminSelected) Administrator
+                    option(value="editor" selected=editorSelected) Editor
             label(for="firstname") First name
             input(type="text" name="firstname" required value=(body && body.firstname))
             label(for="lastname") Last name
