--- a/views/mixins/_pageMetaForm.pug
+++ b/views/mixins/_pageMetaForm.pug
@@ -3,7 +3,7 @@ mixin pageMetaForm(page = {})
         h2 Create page
         label(for="title") Page title
         input(type="text" name='title' placeholder="Untitled page") 
-        label(for="subtitle") Subtitle
+        label(for="subtitle") Page subtitle or description
         input(type="text" name='subtitle')
         label(for="index") Page index
         p This will be used to sequence pages if ordering by name or date is insufficient
