--- a/views/contentManagePage.pug
+++ b/views/contentManagePage.pug
@@ -2,22 +2,44 @@ extends layout
 
 block content
     .inner
-        a(href=`/addpage/2?pid=${page._id}`): p Edit content schema
+        div
+            h3= page.title
+            if page.subtitle
+                p: strong= page.subtitle
+            p Page path: #{page.rel_path}
+            p: strong Page meta
+            if page.created
+                p page created on #{page.created}
+            if page.first_published
+                p first published on #{page.first_published}
+            if page.last_published
+                p last published on #{page.last_published}
+            a(href=`/editpage/${page._id}/1`): p Edit page details
         form.form(method="POST")
+            a(href=`/editpage/${page._id}/2`): p Edit content schema
             input.button(type="submit" value="Publish")
             each item in page.content
                 case item.type
                     when 'heading'
                         div
                             label(for=item._id)= item.title
+                            if item.rules.length
+                                - const [rule] = item.rules
+                                p= rule
                             input(type="text" name=item._id value=item.content)
                     when 'text'
                         div
                             label= item.title
+                            if item.rules
+                                - const [rule] = item.rules
+                            p= item.rules
                             textarea(name=item._id)= item.content
                     when 'image'
                         div
                             label= item.title
+                            if item.rules.length
+                                - const [rule] = item.rules
+                                p= rule
                             input(type="file" name=item._id accept="image/gif,image/png,image/jpeg")
                             //- if item.content
                             //-     img(src=`/uploads/${store.photo}` alt=store.name width="200")
