--- a/views/contentManagePage.pug
+++ b/views/contentManagePage.pug
@@ -1,4 +1,5 @@
 extends layout
+include mixins/_displayRules
 
 block content
     .inner
@@ -24,22 +25,19 @@ block content
                         div
                             label(for=item._id)= item.title
                             if item.rules.length
-                                - const [rule] = item.rules
-                                p= rule
+                                +displayRules(item.rules)
                             input(type="text" name=item._id value=item.content)
                     when 'text'
                         div
                             label= item.title
-                            if item.rules
-                                - const [rule] = item.rules
-                            p= item.rules
+                            if item.rules.length
+                                +displayRules(item.rules)
                             textarea(name=item._id)= item.content
                     when 'image'
                         div
                             label= item.title
                             if item.rules.length
-                                - const [rule] = item.rules
-                                p= rule
+                                +displayRules(item.rules)
                             input(type="file" name=item._id accept="image/gif,image/png,image/jpeg")
                             //- if item.content
                             //-     img(src=`/uploads/${store.photo}` alt=store.name width="200")
