Groundwork for image uploads

--- a/views/contentManagePage.pug
+++ b/views/contentManagePage.pug
@@ -16,7 +16,8 @@ block content
             if page.last_published
                 p last published on #{page.last_published}
             a(href=`/editpage/${page._id}/1`): p Edit page details
-        form.form(method="POST")
+        form.form(method="POST") 
+            // enctype="multipart/form-data"
             a(href=`/editpage/${page._id}/2`): p Edit content schema
             input.button(type="submit" value="Publish")
             each item in page.content
@@ -27,19 +28,22 @@ block content
                             if item.rules.length
                                 +displayRules(item.rules)
                             input(type="text" name=item._id value=item.content)
+                            input(type="hidden" name=item._id value="heading")
                     when 'text'
                         div
                             label= item.title
                             if item.rules.length
                                 +displayRules(item.rules)
-                            textarea(name=item._id)= item.content
+                            textarea(name=item._id data-type=item.type)= item.content
+                            input(type="hidden" name=item._id value="text")
                     when 'image'
                         div
                             label= item.title
                             if item.rules.length
                                 +displayRules(item.rules)
                             input(type="file" name=item._id accept="image/gif,image/png,image/jpeg")
-                            //- if item.content
-                            //-     img(src=`/uploads/${store.photo}` alt=store.name width="200")
+                            input(type="hidden" name=item._id value="image")
+                            if item.content
+                                img(src=`/uploads/${item.content}` alt=item.title width="200")
 
             input.button(type="submit" value="Publish")
