--- a/views/mixins/_displayRules.pug
+++ b/views/mixins/_displayRules.pug
@@ -5,6 +5,7 @@ mixin displayRules(rulesArray)
                 max_value, max_unit, max_apply_to, 
                 min_value, min_unit, min_apply_to
                 } = ruleset
+        p: strong Rules
         p= rule
         p Ceiling: #{max_value}#{max_unit} #{max_apply_to}
         p Floor: #{min_value}#{min_unit} #{min_apply_to}
