--- a/views/mixins/_settingsForm.pug
+++ b/views/mixins/_settingsForm.pug
@@ -13,7 +13,7 @@ mixin settingsForm(s = {})
                 label(for="markdown") Markdown 
                 input(type="checkbox" name='html' value="true" checked=(support && support.html))
                 label(for="html") HTML 
-                input(type="checkbox" name='json' value="true" checked=(support && support.html))
+                input(type="checkbox" name='json' value="true" checked=(support && support.json))
                 label(for="json") JSON 
                 input(type="checkbox" name='pug' value="true" checked=(support && support.pug))
                 label(for="pug") pug 
