Page (+content docs for it) deletion

--- a/views/console.pug
+++ b/views/console.pug
@@ -18,3 +18,4 @@ block content
             each page in pages
                 li
                     +pageCard(page)
+                    button(type="button" class="deletePageBtn" data-id=page._id) Delete page
